fix: wrong background-color syntax

--- a/app/javascript/pages/form/components/ListingApplyFormWrapper.scss
+++ b/app/javascript/pages/form/components/ListingApplyFormWrapper.scss
@@ -1,7 +1,7 @@
 .application-form-section {
   background-color: var(--seeds-color-gray-300);
   @media (max-width: theme("screens.md")) {
-    background-color: none;
+    background-color: var(--seeds-color-white);
   }
 }
 
@@ -122,12 +122,11 @@
 }
 
 .application-form-minimal-container {
-  margin-top: var(--bloom-s12);
-  margin-bottom: var(--bloom-s20);
-  max-width: var(--bloom-width-2xl);
   margin-left: auto;
   margin-right: auto;
-
+  margin-bottom: var(--bloom-s20);
+  margin-top: var(--bloom-s12);
+  max-width: var(--bloom-width-2xl);
   @media (max-width: theme("screens.md")) {
     margin-top: 0;
     margin-bottom: 0;
